# hello_world_android

./: Cargo.toml  README.md
src/: icon-renderer.rs  lib.rs  main.rs
