[package]
name = "hello_world_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29"
gl = "0.14.0"
skia-safe = { version = "0.53", features = ["gl"] }

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[package.metadata.android.signing.release]
path = "/home/moritz/.android/debug.keystore"
keystore_password = "android"