[package]
name = "hello_world_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29"
gl = "0.14"
skia-safe = { version = "0.53", features = ["gl"] }

# This dependency will only be included when targeting Android
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[package.metadata.android.signing.release]
path = "/home/moritz/.android/debug.keystore"
keystore_password = "android"

[package.metadata.android.application]
debuggable = true
# https://github.com/rust-windowing/android-ndk-rs/blob/dc38fcbf688a0a0e7a378a18f7b2cf4c095ccf92/ndk-build/src/manifest.rs#L66
extractNativeLibs = true

[package.metadata.android.sdk]
#min_sdk_version = 21
#target_sdk_version = 21
#max_sdk_version = 29
